Initial commit - add portfolio template

--- a/index.html
+++ b/index.html
@@ -1,40 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Your Name | Portfolio</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="icon" type="image/png" href="https://github.com/favicon.ico"/>
+    <meta charset="UTF-8">
+    <title>Aneesh Mussim | Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="https://github.com/favicon.ico">
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </head>
 <body>
-  <div class="container">
-    <header>
-      <img src="your-photo.jpg" alt="Your Photo" class="profile-img">
-      <h1>Your Name</h1>
-      <p class="bio">A brief bio about yourself, your profession, or interests.</p>
+
+<div class="container">
+
+    <!-- Header & Introduction -->
+    <header class="header">
+        <h1>Aneesh Mussim</h1>
+        <p>AI/ML Engineer | Software Developer | Tech Enthusiast</p>
+        <div class="social-links">
+            <a href="https://github.com/saianeesh01" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://linkedin.com/in/aneesh-mussim/" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="mailto:saianeesh01@gmail.com"><i class="fas fa-envelope"></i></a>
+        </div>
     </header>
 
-    <section class="links">
-      <h2>Find Me On</h2>
-      <ul>
-        <li><a href="https://github.com/your-github-username" target="_blank">GitHub</a></li>
-        <li><a href="https://linkedin.com/in/your-linkedin" target="_blank">LinkedIn</a></li>
-        <li><a href="mailto:your.email@example.com">Email</a></li>
-      </ul>
+    <!-- About Section -->
+    <section class="about">
+        <h2>🎓 About Me</h2>
+        <p>Bachelor of Science in Computer Science at <strong>Virginia Commonwealth University</strong> (Dec 2024)</p>
     </section>
 
+    <!-- Skills -->
+    <section class="skills">
+        <h2>💻 Skills & Technologies</h2>
+        <ul>
+            <li><strong>Programming:</strong> Java, Python, JavaScript, C, C#, CSS, PHP, MySQL</li>
+            <li><strong>Technologies:</strong> Unity, Android Studio, React Native, AWS Cloud, Docker, UiPath, Jupyter, Flask, React, Git CLI, Figma, TensorFlow</li>
+            <li><strong>Methodologies:</strong> Agile, User Research</li>
+        </ul>
+    </section>
+
+    <!-- Experience -->
+    <section class="experience">
+        <h2>🚀 Professional Experience</h2>
+        
+        <div class="exp-item">
+            <h3>Insicloud | AI/ML Intern</h3>
+            <span>Jan 2025 - Present</span>
+            <ul>
+                <li>Developed AI models enhancing data accuracy and interpretability.</li>
+                <li>Built datasets and intelligent evaluation systems leveraging AI.</li>
+            </ul>
+        </div>
+        
+        <div class="exp-item">
+            <h3>Capital One | Capstone Project</h3>
+            <span>Aug 2022 - Apr 2023</span>
+            <ul>
+                <li>Built real-time cybersecurity event pipeline using AWS & Vector.</li>
+                <li>Applied NLP and Synthetic Data Vault for cybersecurity insights.</li>
+            </ul>
+        </div>
+
+        <div class="exp-item">
+            <h3>Bank of America | Software Dev Intern</h3>
+            <span>Mar 2022 - Oct 2023</span>
+            <ul>
+                <li>Created mobile app for financial literacy using React Native.</li>
+                <li>Conducted user research and deployed cross-platform solutions.</li>
+            </ul>
+        </div>
+    </section>
+
+    <!-- Projects -->
     <section class="projects">
-      <h2>My Projects</h2>
-      <ul>
-        <li><a href="https://github.com/your-github-username/project-1" target="_blank">Project 1</a> - Brief description.</li>
-        <li><a href="https://github.com/your-github-username/project-2" target="_blank">Project 2</a> - Brief description.</li>
-        <li><a href="https://github.com/your-github-username/project-3" target="_blank">Project 3</a> - Brief description.</li>
-      </ul>
+        <h2>📁 Projects</h2>
+        <ul>
+            <li>
+                <strong>Fitness Tracker App</strong> – Full-stack app with React, Flask, Docker, and MySQL.
+            </li>
+            <li>
+                <strong>Clothing Consulting Robot</strong> – UiPath automation for weather-based clothing suggestions.
+            </li>
+        </ul>
     </section>
 
+    <!-- Certifications -->
+    <section class="certifications">
+        <h2>📜 Certifications</h2>
+        <ul>
+            <li>Agile Software Development - May 2022</li>
+            <li>IBM Big Data 101 - March 2022</li>
+            <li>IBM Introduction to Cloud - March 2022</li>
+        </ul>
+    </section>
+
+    <!-- Footer -->
     <footer>
-      <p>Copyright © 2024 Your Name. All rights reserved.</p>
+        <p>© 2024 Aneesh Mussim. All rights reserved.</p>
     </footer>
-  </div>
+
+</div>
+
 </body>
 </html>
