Added profile image

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <!-- Header & Introduction -->
     <header class="header">
+        <img src="profile.jpg" alt="Aneesh Mussim" class="profile-img">
         <h1>Aneesh Mussim</h1>
         <p>AI/ML Engineer | Software Developer | Tech Enthusiast</p>
         <div class="social-links">
