--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Aneesh Mussim | Portfolio</title>
+
+    <!-- Techy Orbitron Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600&display=swap" rel="stylesheet">
+
+    <!-- Your custom CSS -->
     <link rel="stylesheet" href="styles.css">
+
+    <!-- GitHub favicon and Font Awesome -->
     <link rel="icon" href="https://github.com/favicon.ico">
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
 
 <div class="container">
