--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
     <!-- About Section -->
     <section class="about">
         <h2>🎓 About Me</h2>
-        <p>Bachelor of Science in Computer Science at <strong>Virginia Commonwealth University</strong> (Dec 2024)</p>
+        <p>
+            I'm a Computer Science student at Virginia Commonwealth University, graduating in December 2024, with a passion for all things AI and machine learning. I’m constantly driven to explore emerging technologies and love building intelligent systems that solve real-world problems. Outside of tech, you’ll probably find me lifting, hooping with friends, designing graphics, or immersed in a good video game — Pokémon and The Last of Us are my go-to titles (shoutout to Arcanine 🔥). My goal is to grow into a dynamic AI/ML engineer, blending logic and creativity to shape the future of technology.
+        </p>    
     </section>
 
     <!-- Skills -->
