--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
 <div class="container">
 
     <!-- Header & Introduction -->
-    <header class="header">
+    <div class="profile-wrapper">
         <img src="profile_circle.png" alt="Aneesh Mussim" class="profile-img">
-        <h1>Aneesh Mussim</h1>
-        <p>AI/ML Engineer | Software Developer | Tech Enthusiast</p>
-        <div class="social-links">
+    
+        <div class="social-overlay">
             <a href="https://github.com/saianeesh01" target="_blank"><i class="fab fa-github"></i></a>
             <a href="https://linkedin.com/in/aneesh-mussim/" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <a href="mailto:saianeesh01@gmail.com"><i class="fas fa-envelope"></i></a>
+            <a href="https://instagram.com/yourhandle" target="_blank"><i class="fab fa-instagram"></i></a>
         </div>
-    </header>
+    </div>
+    
 
     <!-- About Section -->
     <section class="about">
