--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="social-circle">
             <a href="https://github.com/saianeesh01" target="_blank" class="icon icon1"><i class="fab fa-github"></i></a>
             <a href="https://linkedin.com/in/aneesh-mussim/" target="_blank" class="icon icon2"><i class="fab fa-linkedin"></i></a>
-            <a href="https://instagram.com/yourhandle" target="_blank" class="icon icon3"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.instagram.com/aneesh_mussim/" target="_blank" class="icon icon3"><i class="fab fa-instagram"></i></a>
         </div>
     </div>
     
@@ -45,12 +45,13 @@
     <!-- Skills -->
     <section class="skills">
         <h2>💻 Skills & Technologies</h2>
-        <ul>
-            <li><strong>Programming:</strong> Java, Python, JavaScript, C, C#, CSS, PHP, MySQL</li>
-            <li><strong>Technologies:</strong> Unity, Android Studio, React Native, AWS Cloud, Docker, UiPath, Jupyter, Flask, React, Git CLI, Figma, TensorFlow</li>
-            <li><strong>Methodologies:</strong> Agile, User Research</li>
-        </ul>
+        <div class="skill-blocks">
+            <div class="skill-card"><strong>Programming:</strong><br>Java, Python, JavaScript, C, C#, CSS, PHP, MySQL</div>
+            <div class="skill-card"><strong>Technologies:</strong><br>Unity, Android Studio, React Native, AWS, Docker, UiPath, Jupyter, Flask, React, Git CLI, Figma, TensorFlow</div>
+            <div class="skill-card"><strong>Methodologies:</strong><br>Agile, User Research</div>
+        </div>
     </section>
+    
 
     <!-- Experience -->
     <section class="experience">
