arcanine edit idk

--- a/index.html
+++ b/index.html
@@ -239,10 +239,13 @@
     <section class="easter-egg">
         <h2>🐾 My Favorite Pokémon</h2>
         <div class="arcanine-wrapper" onclick="triggerFireGlow()">
-          <img src="https://img.pokemondb.net/artwork/large/arcanine.jpg" alt="Arcanine" class="arcanine-img" />
+          <a href="https://pokemondb.net/pokedex/arcanine" target="_blank">
+            <img src="https://img.pokemondb.net/sprites/black-white/normal/arcanine.png" alt="Arcanine" class="arcanine-img" />
+          </a>
           <p>Click me for 🔥</p>
         </div>
       </section>
+      
       
 
     <!-- Footer -->
