--- a/index.html
+++ b/index.html
@@ -54,9 +54,12 @@
     <section class="about">
         <h2>🎓 About Me</h2>
         <p>
-            I'm a Computer Science student at Virginia Commonwealth University, graduating in December 2024, with a passion for all things AI and machine learning. I’m constantly driven to explore emerging technologies and love building intelligent systems that solve real-world problems. Outside of tech, you’ll probably find me lifting, hooping with friends, designing graphics, or immersed in a good video game — Pokémon and The Last of Us are my go-to titles (shoutout to Arcanine 🔥). My goal is to grow into a dynamic AI/ML engineer, blending logic and creativity to shape the future of technology.
-        </p>    
-    </section>
+          I'm a Computer Science graduate from Virginia Commonwealth University (Class of December 2024), with a passion for all things AI and machine learning. I’m constantly driven to explore emerging technologies and love building intelligent systems that solve real-world problems. Outside of tech, you’ll probably find me lifting, hooping with friends, designing graphics, or immersed in a good video game — Pokémon and <em>The Last of Us</em> are my go-to titles (shoutout to Arcanine 🔥). My goal is to grow into a dynamic AI/ML engineer, blending logic and creativity to shape the future of technology.
+        </p>
+        <p class="opportunity-line">
+          🎯 I'm currently open to full-time roles in AI/ML, software engineering, or research-based positions.
+        </p>
+      </section>
 
     <!-- Skills -->
     <section class="skills">
