--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="social-circle">
                     <a href="https://github.com/saianeesh01" target="_blank" class="icon icon1"><i class="fab fa-github"></i></a>
                     <a href="https://linkedin.com/in/aneesh-mussim/" target="_blank" class="icon icon2"><i class="fab fa-linkedin"></i></a>
-                    <a href="https://www.instagram.com/aneesh_mussim/" target="_blank" class="icon icon3"><i class="fab fa-instagram"></i></a>
+                    <a href="mailto:saianeesh01@gmail.com" class="icon icon3"><i class="fas fa-envelope"></i></a>
                     <a href="Aneesh_Mussim_Resume (1).pdf" download class="icon icon4" title="Download Resume"><i class="fas fa-file-alt"></i></a>
                       
                 </div>
