Added court project

--- a/index.html
+++ b/index.html
@@ -177,6 +177,21 @@
     <!-- Projects -->
     <section class="projects">
         <h2>📁 Projects</h2>
+
+        <div class="project-card" onclick="window.open('https://github.com/saianeesh01/court-deadline-tracker', '_blank')">
+            <div class="project-item">
+                <h3>Court Deadline Tracker</h3>
+                <span>Apr 2025</span>
+                <ul>
+                    <li>Built a legal productivity tool using Flask and React that helps attorneys track and manage court deadlines with natural language input.</li>
+                    <li>Integrated Google Calendar API and OAuth2 to allow per-user syncing of deadlines and automatic event creation with reminders.</li>
+                    <li>Implemented intelligent parsing using regex, spaCy NER, and AI fallback via Ollama to support inputs like “Reply due 10 days after April 1.”</li>
+                    <li>Enabled real-time email alerts, edit/delete syncing with calendar, and a clean, mobile-friendly UI with calendar view and filters.</li>
+                </ul>
+                <div class="hover-msg">Click for Repo</div>
+            </div>
+        </div>
+        
     <div class="project-card" onclick="window.open('https://github.com/saianeesh01/Pomodoro', '_blank')">
         <div class="project-item">
             <h3>Pomodoro Timer with Motivation</h3>
