--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <a href="https://github.com/saianeesh01" target="_blank" class="icon icon1"><i class="fab fa-github"></i></a>
                     <a href="https://linkedin.com/in/aneesh-mussim/" target="_blank" class="icon icon2"><i class="fab fa-linkedin"></i></a>
                     <a href="mailto:saianeesh01@gmail.com" class="icon icon3"><i class="fas fa-envelope"></i></a>
-                    <a href="Aneesh_Mussim_Resume (6).pdf" download class="icon icon4" title="Download Resume"><i class="fas fa-file-alt"></i></a>
+                    <a href="Aneesh_Mussim_Resume (8).pdf" download class="icon icon4" title="Download Resume"><i class="fas fa-file-alt"></i></a>
                       
                 </div>
             </div>
@@ -246,6 +246,7 @@
     <section class="certifications">
         <h2>📜 Certifications</h2>
         <ul>
+            <li>AWS Certified AI Practitioner - April 2025</li>
             <li>Agile Software Development - May 2022</li>
             <li>IBM Big Data 101 - March 2022</li>
             <li>IBM Introduction to Cloud - March 2022</li>
