--- a/index.html
+++ b/index.html
@@ -198,6 +198,20 @@
     <!-- Projects -->
     <section class="projects">
         <h2>📁 Projects</h2>
+        
+        <div class="project-card" onclick="window.open('https://github.com/saianeesh01/solo-leveling-task-app', '_blank')">
+    <div class="project-item">
+        <h3>Solo Leveling Task App</h3>
+        <span>May 2025</span>
+        <ul>
+            <li>Inspired by the Solo Leveling anime, this gamified productivity app helps users build daily habits through quests and XP leveling.</li>
+            <li>Built with React Native and Flask backend; supports user-specific core tasks, daily AI-generated quests, and XP/streak tracking.</li>
+            <li>Features LangChain + Ollama integration to suggest real-life quests based on goal and streak, with caching and async-safe logic.</li>
+            <li>Includes checkable core tasks, level-based titles, streak rewards, animated progress UI, and local persistence per user.</li>
+        </ul>
+        <div class="hover-msg">Click for Repo</div>
+    </div>
+</div>
 
         <div class="project-card" onclick="window.open('https://github.com/saianeesh01/court-deadline-tracker', '_blank')">
             <div class="project-item">
