added solo project

--- a/index.html
+++ b/index.html
@@ -198,7 +198,20 @@
     <!-- Projects -->
     <section class="projects">
         <h2>📁 Projects</h2>
-        
+        <div class="project-card" onclick="window.open('https://github.com/saianeesh01/proposal_scanner_prototype', '_blank')">
+    <div class="project-item">
+        <h3>Proposal Scanner Prototype</h3>
+        <span>May 2025</span>
+        <ul>
+            <li>AI-powered document scanner designed to detect and summarize immigration-related proposal documents using OCR and NLP.</li>
+            <li>Built with Flask and integrated with AWS Textract, FAISS, and LLM summarization for hybrid structured/unstructured document analysis.</li>
+            <li>Supports both local and S3-based scanning, highlights structured fields, uses keyword boosting, and flags ambiguous cases.</li>
+            <li>Includes FAISS document classification, LLM summary generation, dynamic frontend UI with toggle panels, and scan history logging.</li>
+        </ul>
+        <div class="hover-msg">Click for Repo</div>
+    </div>
+</div>
+
         <div class="project-card" onclick="window.open('https://github.com/saianeesh01/solo-leveling-task-app', '_blank')">
     <div class="project-item">
         <h3>Solo Leveling Task App</h3>
