added unity projects

--- a/index.html
+++ b/index.html
@@ -287,6 +287,59 @@
             </ul>
             <div class="hover-msg">Click for Repo</div>
         </div>
+
+        <div class="project-card" onclick="window.open('https://aneesh-m.itch.io/flash-run', '_blank')">
+    <div class="project-item">
+        <h3>Flash Run</h3>
+        <span>2017</span>
+        <ul>
+            <li>My first-ever Unity game: a fast-paced 2D endless runner inspired by The Flash and retro sprites like Mega Man.</li>
+            <li>Implemented speed boosts, projectile attacks, and parallax backgrounds using Unity and C#.</li>
+            <li>Animated character movements from sprite sheets and designed power-up logic and collision detection.</li>
+        </ul>
+        <div class="hover-msg">Click to Play</div>
+    </div>
+</div>
+
+<div class="project-card" onclick="window.open('https://aneesh-m.itch.io/flash-run-2', '_blank')">
+    <div class="project-item">
+        <h3>Flash Run 2</h3>
+        <span>2017</span>
+        <ul>
+            <li>Sequel to Flash Run featuring smoother sprite animations, enhanced effects, and refined UI feedback.</li>
+            <li>Added new enemies, better hitbox precision, background music, and difficulty scaling.</li>
+            <li>Used Photoshop to polish sprite transitions before importing into Unity's animation controller.</li>
+        </ul>
+        <div class="hover-msg">Click to Play</div>
+    </div>
+</div>
+
+<div class="project-card" onclick="window.open('https://aneesh-m.itch.io/pro', '_blank')">
+    <div class="project-item">
+        <h3>Projectiles</h3>
+        <span>2019</span>
+        <ul>
+            <li>Sprite-based 2D fighting game where characters use projectiles inspired by various pop culture franchises.</li>
+            <li>Used Unity and C# to implement projectile physics, player states, hit detection, and character switching.</li>
+            <li>Photoshop was used to animate sprites frame-by-frame and refine visual effects.</li>
+        </ul>
+        <div class="hover-msg">Click to Play</div>
+    </div>
+</div>
+
+<div class="project-card" onclick="window.open('https://aneesh-m.itch.io/venom-run', '_blank')">
+    <div class="project-item">
+        <h3>Venom Run</h3>
+        <span>2019</span>
+        <ul>
+            <li>Spinoff endless runner set in a darker theme, with chaotic visuals and faster gameplay loops.</li>
+            <li>Designed all core mechanics, sprite states, and visual effects in Unity using C# and Photoshop animations.</li>
+            <li>Built on previous runner logic with additional polish, new obstacles, and tighter movement controls.</li>
+        </ul>
+        <div class="hover-msg">Click to Play</div>
+    </div>
+</div>
+
     </section>
     
 
