added unity projects

--- a/index.html
+++ b/index.html
@@ -288,27 +288,15 @@
             <div class="hover-msg">Click for Repo</div>
         </div>
 
-        <div class="project-card" onclick="window.open('https://aneesh-m.itch.io/flash-run', '_blank')">
+        <div class="project-card" onclick="window.open('https://aneesh-m.itch.io/venom-run', '_blank')">
     <div class="project-item">
-        <h3>Flash Run</h3>
-        <span>2017</span>
+        <h3>Venom Run</h3>
+        <span>2019</span>
         <ul>
-            <li>My first-ever Unity game: a fast-paced 2D endless runner inspired by The Flash and retro sprites like Mega Man.</li>
-            <li>Implemented speed boosts, projectile attacks, and parallax backgrounds using Unity and C#.</li>
-            <li>Animated character movements from sprite sheets and designed power-up logic and collision detection.</li>
-        </ul>
-        <div class="hover-msg">Click to Play</div>
-    </div>
-</div>
-
-<div class="project-card" onclick="window.open('https://aneesh-m.itch.io/flash-run-2', '_blank')">
-    <div class="project-item">
-        <h3>Flash Run 2</h3>
-        <span>2017</span>
-        <ul>
-            <li>Sequel to Flash Run featuring smoother sprite animations, enhanced effects, and refined UI feedback.</li>
-            <li>Added new enemies, better hitbox precision, background music, and difficulty scaling.</li>
-            <li>Used Photoshop to polish sprite transitions before importing into Unity's animation controller.</li>
+            <li><strong>Venom Run</strong> is a symbiote-themed endless runner that pushes the chaos and speed of the Flash Run series into overdrive.</li>
+            <li>Designed tight movement mechanics, reactive enemy logic, and eerie visual effects using Unity and C#.</li>
+            <li>Used Photoshop to animate symbiote-inspired sprites, and implemented layered parallax backgrounds to heighten immersion.</li>
+            <li>This project was a creative deep dive into darker aesthetics, player tension, and the art of fast-paced level design.</li>
         </ul>
         <div class="hover-msg">Click to Play</div>
     </div>
@@ -319,22 +307,38 @@
         <h3>Projectiles</h3>
         <span>2019</span>
         <ul>
-            <li>Sprite-based 2D fighting game where characters use projectiles inspired by various pop culture franchises.</li>
-            <li>Used Unity and C# to implement projectile physics, player states, hit detection, and character switching.</li>
-            <li>Photoshop was used to animate sprites frame-by-frame and refine visual effects.</li>
+            <li><strong>Projectiles</strong> is a 2D sprite-based fighting game where characters from across pop culture launch signature projectile attacks.</li>
+            <li>Created animated attack sequences in Photoshop and scripted combat logic, character switching, and projectile physics in Unity with C#.</li>
+            <li>Fine-tuned hitboxes, visual feedback, and stage transitions to make gameplay feel responsive and arcade-authentic.</li>
+            <li>This was my first time building combat systems, and it taught me how to merge animation, logic, and gameplay flow into a single design.</li>
         </ul>
         <div class="hover-msg">Click to Play</div>
     </div>
 </div>
 
-<div class="project-card" onclick="window.open('https://aneesh-m.itch.io/venom-run', '_blank')">
+<div class="project-card" onclick="window.open('https://aneesh-m.itch.io/flash-run-2', '_blank')">
     <div class="project-item">
-        <h3>Venom Run</h3>
-        <span>2019</span>
+        <h3>Flash Run 2</h3>
+        <span>2017</span>
         <ul>
-            <li>Spinoff endless runner set in a darker theme, with chaotic visuals and faster gameplay loops.</li>
-            <li>Designed all core mechanics, sprite states, and visual effects in Unity using C# and Photoshop animations.</li>
-            <li>Built on previous runner logic with additional polish, new obstacles, and tighter movement controls.</li>
+            <li><strong>Flash Run 2</strong> expanded on everything I learned from building the original: smoother animations, smarter enemies, and a more polished user experience.</li>
+            <li>Introduced background music, a progressive difficulty curve, and enhanced VFX to make every sprint feel cinematic and satisfying.</li>
+            <li>Refactored earlier C# scripts to optimize performance and cleaned up animations with frame-perfect transitions from Photoshop.</li>
+            <li>This sequel gave me confidence in iteration — how much better a project can get with more experience and creative vision.</li>
+        </ul>
+        <div class="hover-msg">Click to Play</div>
+    </div>
+</div>
+
+<div class="project-card" onclick="window.open('https://aneesh-m.itch.io/flash-run', '_blank')">
+    <div class="project-item">
+        <h3>Flash Run</h3>
+        <span>2017</span>
+        <ul>
+            <li><strong>Flash Run</strong> was where it all started — my very first programming project, built with Unity and C# during high school.</li>
+            <li>A 2D endless runner inspired by The Flash and Mega Man sprites, featuring basic projectile mechanics and reactive obstacles.</li>
+            <li>I used sprite sheets to hand-animate movement states, coded hit detection and game logic, and watched my ideas come alive on screen.</li>
+            <li>It wasn’t perfect — but building this game lit the spark that made me fall in love with creating things through code. Everything else started here.</li>
         </ul>
         <div class="hover-msg">Click to Play</div>
     </div>
