--- a/index.html
+++ b/index.html
@@ -65,6 +65,64 @@
 
       <!-- Add more logos ... -->
     </div>
+    <div class="skills-categories">
+      <div class="skill-category">
+        <h3>Languages</h3>
+        <div class="skill-tags">
+          <span class="skill">Python</span>
+          <span class="skill">Java</span>
+          <span class="skill">JavaScript</span>
+          <span class="skill">C</span>
+          <span class="skill">C#</span>
+          <span class="skill">SQL</span>
+        </div>
+      </div>
+      <div class="skill-category">
+        <h3>Frameworks &amp; Tools</h3>
+        <div class="skill-tags">
+          <span class="skill">React</span>
+          <span class="skill">React Native</span>
+          <span class="skill">Angular</span>
+          <span class="skill">Flask</span>
+          <span class="skill">Docker</span>
+          <span class="skill">Unity</span>
+          <span class="skill">Git</span>
+          <span class="skill">GitHub Actions</span>
+          <span class="skill">gRPC</span>
+        </div>
+      </div>
+      <div class="skill-category">
+        <h3>Cloud &amp; Databases</h3>
+        <div class="skill-tags">
+          <span class="skill">AWS (Lambda, S3, Textract, Bedrock)</span>
+          <span class="skill">Firebase</span>
+          <span class="skill">MySQL</span>
+          <span class="skill">Postgres</span>
+          <span class="skill">SQLite</span>
+        </div>
+      </div>
+      <div class="skill-category">
+        <h3>AI/ML</h3>
+        <div class="skill-tags">
+          <span class="skill">LangChain</span>
+          <span class="skill">Ollama</span>
+          <span class="skill">TensorFlow</span>
+          <span class="skill">scikit-learn</span>
+          <span class="skill">FAISS</span>
+          <span class="skill">HuggingFace</span>
+          <span class="skill">SageMaker</span>
+        </div>
+      </div>
+      <div class="skill-category">
+        <h3>Methods</h3>
+        <div class="skill-tags">
+          <span class="skill">Agile</span>
+          <span class="skill">TDD</span>
+          <span class="skill">User-Centered Design</span>
+          <span class="skill">CI/CD</span>
+        </div>
+      </div>
+    </div>
   </section>
 
   <!-- ===== EXPERIENCE ===== -->
