added skills icons

--- a/index.html
+++ b/index.html
@@ -68,58 +68,151 @@
     <div class="skills-categories">
       <div class="skill-category">
         <h3>Languages</h3>
-        <div class="skill-tags">
-          <span class="skill">Python</span>
-          <span class="skill">Java</span>
-          <span class="skill">JavaScript</span>
-          <span class="skill">C</span>
-          <span class="skill">C#</span>
-          <span class="skill">SQL</span>
+        <div class="skill-grid">
+          <div class="skill-logo" data-skill="85">
+            <img src="assets/python.svg" alt="Python">
+            <span class="skill-tooltip">Python</span>
+          </div>
+          <div class="skill-logo">
+            <i class="fab fa-java"></i>
+            <span class="skill-tooltip">Java</span>
+          </div>
+          <div class="skill-logo">
+            <i class="fab fa-js-square"></i>
+            <span class="skill-tooltip">JavaScript</span>
+          </div>
+          <div class="skill-logo">
+            <i class="fas fa-c"></i>
+            <span class="skill-tooltip">C</span>
+          </div>
+          <div class="skill-logo">
+            <i class="fas fa-hashtag"></i>
+            <span class="skill-tooltip">C#</span>
+          </div>
+          <div class="skill-logo">
+            <i class="fas fa-database"></i>
+            <span class="skill-tooltip">SQL</span>
+          </div>
         </div>
       </div>
       <div class="skill-category">
         <h3>Frameworks &amp; Tools</h3>
-        <div class="skill-tags">
-          <span class="skill">React</span>
-          <span class="skill">React Native</span>
-          <span class="skill">Angular</span>
-          <span class="skill">Flask</span>
-          <span class="skill">Docker</span>
-          <span class="skill">Unity</span>
-          <span class="skill">Git</span>
-          <span class="skill">GitHub Actions</span>
-          <span class="skill">gRPC</span>
+        <div class="skill-grid">
+          <div class="skill-logo" data-skill="80">
+            <img src="assets/react.svg" alt="React">
+            <span class="skill-tooltip">React</span>
+          </div>
+          <div class="skill-logo">
+            <i class="fab fa-react"></i>
+            <span class="skill-tooltip">React Native</span>
+          </div>
+          <div class="skill-logo">
+            <i class="fab fa-angular"></i>
+            <span class="skill-tooltip">Angular</span>
+          </div>
+          <div class="skill-logo">
+            <img src="assets/flask.svg" alt="Flask">
+            <span class="skill-tooltip">Flask</span>
+          </div>
+          <div class="skill-logo">
+            <img src="assets/docker.svg" alt="Docker">
+            <span class="skill-tooltip">Docker</span>
+          </div>
+          <div class="skill-logo">
+            <img src="assets/unity.svg" alt="Unity">
+            <span class="skill-tooltip">Unity</span>
+          </div>
+          <div class="skill-logo">
+            <i class="fab fa-git-alt"></i>
+            <span class="skill-tooltip">Git</span>
+          </div>
+          <div class="skill-logo">
+            <i class="fab fa-github"></i>
+            <span class="skill-tooltip">GitHub Actions</span>
+          </div>
+          <div class="skill-logo">
+            <img src="assets/grpc.svg" alt="gRPC">
+            <span class="skill-tooltip">gRPC</span>
+          </div>
         </div>
       </div>
       <div class="skill-category">
         <h3>Cloud &amp; Databases</h3>
-        <div class="skill-tags">
-          <span class="skill">AWS (Lambda, S3, Textract, Bedrock)</span>
-          <span class="skill">Firebase</span>
-          <span class="skill">MySQL</span>
-          <span class="skill">Postgres</span>
-          <span class="skill">SQLite</span>
+        <div class="skill-grid">
+          <div class="skill-logo" data-skill="75">
+            <img src="assets/aws.svg" alt="AWS">
+            <span class="skill-tooltip">AWS (Lambda, S3, Textract, Bedrock)</span>
+          </div>
+          <div class="skill-logo">
+            <img src="assets/firebase.svg" alt="Firebase">
+            <span class="skill-tooltip">Firebase</span>
+          </div>
+          <div class="skill-logo">
+            <img src="assets/mysql.svg" alt="MySQL">
+            <span class="skill-tooltip">MySQL</span>
+          </div>
+          <div class="skill-logo">
+            <img src="assets/postgres.svg" alt="Postgres">
+            <span class="skill-tooltip">Postgres</span>
+          </div>
+          <div class="skill-logo">
+            <img src="assets/sqlite.svg" alt="SQLite">
+            <span class="skill-tooltip">SQLite</span>
+          </div>
         </div>
       </div>
       <div class="skill-category">
         <h3>AI/ML</h3>
-        <div class="skill-tags">
-          <span class="skill">LangChain</span>
-          <span class="skill">Ollama</span>
-          <span class="skill">TensorFlow</span>
-          <span class="skill">scikit-learn</span>
-          <span class="skill">FAISS</span>
-          <span class="skill">HuggingFace</span>
-          <span class="skill">SageMaker</span>
+        <div class="skill-grid">
+          <div class="skill-logo">
+            <img src="assets/langchain.svg" alt="LangChain">
+            <span class="skill-tooltip">LangChain</span>
+          </div>
+          <div class="skill-logo">
+            <img src="assets/ollama.svg" alt="Ollama">
+            <span class="skill-tooltip">Ollama</span>
+          </div>
+          <div class="skill-logo">
+            <img src="assets/tensorflow.svg" alt="TensorFlow">
+            <span class="skill-tooltip">TensorFlow</span>
+          </div>
+          <div class="skill-logo">
+            <img src="assets/scikit-learn.svg" alt="scikit-learn">
+            <span class="skill-tooltip">scikit-learn</span>
+          </div>
+          <div class="skill-logo">
+            <img src="assets/faiss.svg" alt="FAISS">
+            <span class="skill-tooltip">FAISS</span>
+          </div>
+          <div class="skill-logo">
+            <img src="assets/huggingface.svg" alt="HuggingFace">
+            <span class="skill-tooltip">HuggingFace</span>
+          </div>
+          <div class="skill-logo">
+            <img src="assets/sagemaker.svg" alt="SageMaker">
+            <span class="skill-tooltip">SageMaker</span>
+          </div>
         </div>
       </div>
       <div class="skill-category">
         <h3>Methods</h3>
-        <div class="skill-tags">
-          <span class="skill">Agile</span>
-          <span class="skill">TDD</span>
-          <span class="skill">User-Centered Design</span>
-          <span class="skill">CI/CD</span>
+        <div class="skill-grid">
+          <div class="skill-logo">
+            <i class="fas fa-users"></i>
+            <span class="skill-tooltip">Agile</span>
+          </div>
+          <div class="skill-logo">
+            <i class="fas fa-vial"></i>
+            <span class="skill-tooltip">TDD</span>
+          </div>
+          <div class="skill-logo">
+            <i class="fas fa-user-check"></i>
+            <span class="skill-tooltip">User-Centered Design</span>
+          </div>
+          <div class="skill-logo">
+            <i class="fas fa-sync-alt"></i>
+            <span class="skill-tooltip">CI/CD</span>
+          </div>
         </div>
       </div>
     </div>
